supervisor-macros/tests/ui/compile_fail/too_many_nodes.rs
//! The graph is capped at 256 node slots: every graph index (dep tables,
//! `topo_sort_const` queue/order) is a `u8`, so a 257th slot would silently
//! truncate. The macro rejects the declaration at expansion time instead.
//! (257 parked nodes, no `spawn:`, generated mechanically.)

use embassy_supervisor::supervisor_graph;

supervisor_graph! {
    node N000 = Terminate, deps: [];
    node N001 = Terminate, deps: [];
    node N002 = Terminate, deps: [];
    node N003 = Terminate, deps: [];
    node N004 = Terminate, deps: [];
    node N005 = Terminate, deps: [];
    node N006 = Terminate, deps: [];
    node N007 = Terminate, deps: [];
    node N008 = Terminate, deps: [];
    node N009 = Terminate, deps: [];
    node N010 = Terminate, deps: [];
    node N011 = Terminate, deps: [];
    node N012 = Terminate, deps: [];
    node N013 = Terminate, deps: [];
    node N014 = Terminate, deps: [];
    node N015 = Terminate, deps: [];
    node N016 = Terminate, deps: [];
    node N017 = Terminate, deps: [];
    node N018 = Terminate, deps: [];
    node N019 = Terminate, deps: [];
    node N020 = Terminate, deps: [];
    node N021 = Terminate, deps: [];
    node N022 = Terminate, deps: [];
    node N023 = Terminate, deps: [];
    node N024 = Terminate, deps: [];
    node N025 = Terminate, deps: [];
    node N026 = Terminate, deps: [];
    node N027 = Terminate, deps: [];
    node N028 = Terminate, deps: [];
    node N029 = Terminate, deps: [];
    node N030 = Terminate, deps: [];
    node N031 = Terminate, deps: [];
    node N032 = Terminate, deps: [];
    node N033 = Terminate, deps: [];
    node N034 = Terminate, deps: [];
    node N035 = Terminate, deps: [];
    node N036 = Terminate, deps: [];
    node N037 = Terminate, deps: [];
    node N038 = Terminate, deps: [];
    node N039 = Terminate, deps: [];
    node N040 = Terminate, deps: [];
    node N041 = Terminate, deps: [];
    node N042 = Terminate, deps: [];
    node N043 = Terminate, deps: [];
    node N044 = Terminate, deps: [];
    node N045 = Terminate, deps: [];
    node N046 = Terminate, deps: [];
    node N047 = Terminate, deps: [];
    node N048 = Terminate, deps: [];
    node N049 = Terminate, deps: [];
    node N050 = Terminate, deps: [];
    node N051 = Terminate, deps: [];
    node N052 = Terminate, deps: [];
    node N053 = Terminate, deps: [];
    node N054 = Terminate, deps: [];
    node N055 = Terminate, deps: [];
    node N056 = Terminate, deps: [];
    node N057 = Terminate, deps: [];
    node N058 = Terminate, deps: [];
    node N059 = Terminate, deps: [];
    node N060 = Terminate, deps: [];
    node N061 = Terminate, deps: [];
    node N062 = Terminate, deps: [];
    node N063 = Terminate, deps: [];
    node N064 = Terminate, deps: [];
    node N065 = Terminate, deps: [];
    node N066 = Terminate, deps: [];
    node N067 = Terminate, deps: [];
    node N068 = Terminate, deps: [];
    node N069 = Terminate, deps: [];
    node N070 = Terminate, deps: [];
    node N071 = Terminate, deps: [];
    node N072 = Terminate, deps: [];
    node N073 = Terminate, deps: [];
    node N074 = Terminate, deps: [];
    node N075 = Terminate, deps: [];
    node N076 = Terminate, deps: [];
    node N077 = Terminate, deps: [];
    node N078 = Terminate, deps: [];
    node N079 = Terminate, deps: [];
    node N080 = Terminate, deps: [];
    node N081 = Terminate, deps: [];
    node N082 = Terminate, deps: [];
    node N083 = Terminate, deps: [];
    node N084 = Terminate, deps: [];
    node N085 = Terminate, deps: [];
    node N086 = Terminate, deps: [];
    node N087 = Terminate, deps: [];
    node N088 = Terminate, deps: [];
    node N089 = Terminate, deps: [];
    node N090 = Terminate, deps: [];
    node N091 = Terminate, deps: [];
    node N092 = Terminate, deps: [];
    node N093 = Terminate, deps: [];
    node N094 = Terminate, deps: [];
    node N095 = Terminate, deps: [];
    node N096 = Terminate, deps: [];
    node N097 = Terminate, deps: [];
    node N098 = Terminate, deps: [];
    node N099 = Terminate, deps: [];
    node N100 = Terminate, deps: [];
    node N101 = Terminate, deps: [];
    node N102 = Terminate, deps: [];
    node N103 = Terminate, deps: [];
    node N104 = Terminate, deps: [];
    node N105 = Terminate, deps: [];
    node N106 = Terminate, deps: [];
    node N107 = Terminate, deps: [];
    node N108 = Terminate, deps: [];
    node N109 = Terminate, deps: [];
    node N110 = Terminate, deps: [];
    node N111 = Terminate, deps: [];
    node N112 = Terminate, deps: [];
    node N113 = Terminate, deps: [];
    node N114 = Terminate, deps: [];
    node N115 = Terminate, deps: [];
    node N116 = Terminate, deps: [];
    node N117 = Terminate, deps: [];
    node N118 = Terminate, deps: [];
    node N119 = Terminate, deps: [];
    node N120 = Terminate, deps: [];
    node N121 = Terminate, deps: [];
    node N122 = Terminate, deps: [];
    node N123 = Terminate, deps: [];
    node N124 = Terminate, deps: [];
    node N125 = Terminate, deps: [];
    node N126 = Terminate, deps: [];
    node N127 = Terminate, deps: [];
    node N128 = Terminate, deps: [];
    node N129 = Terminate, deps: [];
    node N130 = Terminate, deps: [];
    node N131 = Terminate, deps: [];
    node N132 = Terminate, deps: [];
    node N133 = Terminate, deps: [];
    node N134 = Terminate, deps: [];
    node N135 = Terminate, deps: [];
    node N136 = Terminate, deps: [];
    node N137 = Terminate, deps: [];
    node N138 = Terminate, deps: [];
    node N139 = Terminate, deps: [];
    node N140 = Terminate, deps: [];
    node N141 = Terminate, deps: [];
    node N142 = Terminate, deps: [];
    node N143 = Terminate, deps: [];
    node N144 = Terminate, deps: [];
    node N145 = Terminate, deps: [];
    node N146 = Terminate, deps: [];
    node N147 = Terminate, deps: [];
    node N148 = Terminate, deps: [];
    node N149 = Terminate, deps: [];
    node N150 = Terminate, deps: [];
    node N151 = Terminate, deps: [];
    node N152 = Terminate, deps: [];
    node N153 = Terminate, deps: [];
    node N154 = Terminate, deps: [];
    node N155 = Terminate, deps: [];
    node N156 = Terminate, deps: [];
    node N157 = Terminate, deps: [];
    node N158 = Terminate, deps: [];
    node N159 = Terminate, deps: [];
    node N160 = Terminate, deps: [];
    node N161 = Terminate, deps: [];
    node N162 = Terminate, deps: [];
    node N163 = Terminate, deps: [];
    node N164 = Terminate, deps: [];
    node N165 = Terminate, deps: [];
    node N166 = Terminate, deps: [];
    node N167 = Terminate, deps: [];
    node N168 = Terminate, deps: [];
    node N169 = Terminate, deps: [];
    node N170 = Terminate, deps: [];
    node N171 = Terminate, deps: [];
    node N172 = Terminate, deps: [];
    node N173 = Terminate, deps: [];
    node N174 = Terminate, deps: [];
    node N175 = Terminate, deps: [];
    node N176 = Terminate, deps: [];
    node N177 = Terminate, deps: [];
    node N178 = Terminate, deps: [];
    node N179 = Terminate, deps: [];
    node N180 = Terminate, deps: [];
    node N181 = Terminate, deps: [];
    node N182 = Terminate, deps: [];
    node N183 = Terminate, deps: [];
    node N184 = Terminate, deps: [];
    node N185 = Terminate, deps: [];
    node N186 = Terminate, deps: [];
    node N187 = Terminate, deps: [];
    node N188 = Terminate, deps: [];
    node N189 = Terminate, deps: [];
    node N190 = Terminate, deps: [];
    node N191 = Terminate, deps: [];
    node N192 = Terminate, deps: [];
    node N193 = Terminate, deps: [];
    node N194 = Terminate, deps: [];
    node N195 = Terminate, deps: [];
    node N196 = Terminate, deps: [];
    node N197 = Terminate, deps: [];
    node N198 = Terminate, deps: [];
    node N199 = Terminate, deps: [];
    node N200 = Terminate, deps: [];
    node N201 = Terminate, deps: [];
    node N202 = Terminate, deps: [];
    node N203 = Terminate, deps: [];
    node N204 = Terminate, deps: [];
    node N205 = Terminate, deps: [];
    node N206 = Terminate, deps: [];
    node N207 = Terminate, deps: [];
    node N208 = Terminate, deps: [];
    node N209 = Terminate, deps: [];
    node N210 = Terminate, deps: [];
    node N211 = Terminate, deps: [];
    node N212 = Terminate, deps: [];
    node N213 = Terminate, deps: [];
    node N214 = Terminate, deps: [];
    node N215 = Terminate, deps: [];
    node N216 = Terminate, deps: [];
    node N217 = Terminate, deps: [];
    node N218 = Terminate, deps: [];
    node N219 = Terminate, deps: [];
    node N220 = Terminate, deps: [];
    node N221 = Terminate, deps: [];
    node N222 = Terminate, deps: [];
    node N223 = Terminate, deps: [];
    node N224 = Terminate, deps: [];
    node N225 = Terminate, deps: [];
    node N226 = Terminate, deps: [];
    node N227 = Terminate, deps: [];
    node N228 = Terminate, deps: [];
    node N229 = Terminate, deps: [];
    node N230 = Terminate, deps: [];
    node N231 = Terminate, deps: [];
    node N232 = Terminate, deps: [];
    node N233 = Terminate, deps: [];
    node N234 = Terminate, deps: [];
    node N235 = Terminate, deps: [];
    node N236 = Terminate, deps: [];
    node N237 = Terminate, deps: [];
    node N238 = Terminate, deps: [];
    node N239 = Terminate, deps: [];
    node N240 = Terminate, deps: [];
    node N241 = Terminate, deps: [];
    node N242 = Terminate, deps: [];
    node N243 = Terminate, deps: [];
    node N244 = Terminate, deps: [];
    node N245 = Terminate, deps: [];
    node N246 = Terminate, deps: [];
    node N247 = Terminate, deps: [];
    node N248 = Terminate, deps: [];
    node N249 = Terminate, deps: [];
    node N250 = Terminate, deps: [];
    node N251 = Terminate, deps: [];
    node N252 = Terminate, deps: [];
    node N253 = Terminate, deps: [];
    node N254 = Terminate, deps: [];
    node N255 = Terminate, deps: [];
    node N256 = Terminate, deps: [];
}

fn main() {}
